--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
  <body>
-  Privacy Policy
+  <p>Privacy Policy</p>
   This privacy policy applies to the CloudCollide app (hereby referred to as "Application") for mobile devices that was created by Juan F Rueda (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".
 
 Information Collection and Use
